--- a/mumbai.html
+++ b/mumbai.html
@@ -17,15 +17,16 @@
             <th>가격</th>
         </table>
         <h2>사진</h2>
-        <img src="" alt="">
+        <img src="https://postfiles.pstatic.net/MjAyMTA1MDNfMTAz/MDAxNjIwMDQ4MzU5Nzg5.iFbQYp8Ptvwphr46NkZX5Jyg1IbVHuYPk0ELxrDhdvsg.b1bW9_rDGjl-9-m5VL0p9_8_charYPoH16TfQh_o_AAg.JPEG.qprktm12/beauty_20210410190904.jpg?type=w773" alt="부산대학교 뭄바이 커리" style="transform:rotate(90deg);"/>
         <h2>위치</h2>
         <li>부산 금정구 금강로 271-6</li>
         <h2>후기😋</h2>
-        <li>버터치킨커리 ⭐⭐⭐⭐⭐</li>
-        <li>난 ⭐⭐⭐⭐⭐</li>
-        <li>강황밥 ⭐⭐⭐⭐⭐</li>
-        <li>탄두리치킨 ⭐</li>
-        <li>라씨 ⭐⭐⭐⭐⭐</li>
+        <li>버터치킨커리 ⭐⭐⭐⭐⭐ 버터가 들어가서 느끼할 줄 알았는데 역시 직원의 픽! 맛있어서 또 포장해감</li>
+        <li>난 ⭐⭐⭐⭐⭐ 카레와 찍어먹으면 완전 맜있음</li>
+        <li>강황밥 ⭐⭐⭐⭐⭐ 밥 맛있음 신기함</li>
+        <li>탄두리치킨 ⭐ 사실 탄두리 자체가 내 입맛 아님.</li>
+        <li>라씨 ⭐⭐⭐⭐ 요거트 맛</li>
+        <li>가격 ⭐⭐⭐⭐ 맛있는데 좀 비쌈</li>
     </main>
 </body>
 </html>
