--- a/GRADUATION/ALBUM.html
+++ b/GRADUATION/ALBUM.html
@@ -17,7 +17,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <video src="./KakaoTalk_20220225_231022940.mp4" class="d-block w-100" controls width="500" height="400"></video>
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
