--- a/GRADUATION/ALBUM.html
+++ b/GRADUATION/ALBUM.html
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <vidceo src="./KakaoTalk_20220226_222559055.mp4s" class="d-block w-100" controls width="500" height="400"></video>
+          <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
