--- a/GRADUATION/ALBUM.html
+++ b/GRADUATION/ALBUM.html
@@ -15,7 +15,9 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="row">
+    <div class="col"></div>
+    <div class="carousel-inner; col-5">
       <div class="carousel-item active">
         <video src="./KakaoTalk_20220225_231022940.mp4" class="d-block w-100" controls width="500" height="400"></video>
         <div class="carousel-caption d-none d-md-block">
@@ -24,19 +26,21 @@
         </div>
       </div>
       <div class="carousel-item">
-        <vidceo src="./KakaoTalk_20220226_222559055.mp4s" class="d-block w-100" controls width="500" height="400"></video>
+        <vidceo src="./KakaoTalk_20220226_222559055.mp4" class="d-block w-100" controls width="500" height="400"></video>
           <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <vidceo src="./KakaoTalk_20220226_222602167.mp4" class="d-block w-100" controls width="500" height="400"></video>
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
+    </div>
+    <div class="col"></div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
