--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../css/bootstrap-reboot.min.css" rel="stylesheet">
+  <!-- <link href="../css/bootstrap-reboot.min.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="ALBUM.css" rel="stylesheet">
   <title>ALBUM📷</title>
 </head>
@@ -33,7 +34,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <vidceo src="./KakaoTalk_20220226_222559055.mp4" class="d-block w-100" controls width="500" height="400">
+          <vidceo src="./GRADUATION/KakaoTalk_20220225_231022940.mp4" class="d-block w-100" controls width="500" height="400">
             </video>
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
@@ -41,7 +42,7 @@
             </div>
         </div>
         <div class="carousel-item">
-          <vidceo src="./KakaoTalk_20220226_222602167.mp4" class="d-block w-100" controls width="500" height="400">
+          <vidceo src="./GRADUATION/KakaoTalk_20220225_231022940.mp4`" class="d-block w-100" controls width="500" height="400">
             </video>
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
@@ -100,8 +101,8 @@
       <div class="col"></div>
     </div>
   </div>
-
-  <script src="../js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
