--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -50,7 +50,16 @@
     </div>
   </nav>
 
-  
+  <main>
+    <div class="card" style="width: 18rem;">
+      <img src="/GRADUATION/KakaoTalk_20220235_231022940.mp4" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </main>
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="../js/bootstrap.min.js"></script>
 </body>
