--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -51,12 +51,22 @@
   </nav>
 
   <main>
-    <div class="card" style="width: 18rem;">
-      <img src="/GRADUATION/KakaoTalk_20220235_231022940.mp4" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="row">
+      <div class="card" style="width: 18rem;">
+        <img src="/ALBUM/TRIP/2018.02.20~02.24 일본/2018-02-21-16-35-29.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2018.02.20~24<br>일본</h5>
+          <p class="card-text">은해언니랑</p>
+          <a href="#" class="btn btn-primary bg-primary">GO</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./TRIP/2019.01.03~01.16 베트남 라오스/1월 3일 다낭/20190103_114357_HDR.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2019.01.03~16<br>베트남/라오스</h5>
+          <p class="card-text">해인이랑</p>
+          <a href="#" class="btn btn-primary bg-primary">GO</a>
+        </div>
       </div>
     </div>
   </main>
