--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">ALBUM📷</a>
@@ -51,7 +52,7 @@
   </nav>
 
   <main>
-    <div class="row">
+    <div class="row mt-3">
       <div class="card" style="width: 18rem;">
         <img src="/ALBUM/GRADUATION/KakaoTalk_20220225_235145116_04.webp" class="card-img-top" alt="...">
         <div class="card-body">
@@ -61,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div classs="row">
+    <div classs="row mt-3">
       <div class="col"></div>
       <div class="col">
         <div class="card" style="width: 18rem;">
