--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -52,7 +52,7 @@
   </nav>
 
   <main>
-    <div class="row mt-3">
+    <div class="row mt-3 ml=auto">
       <div class="card" style="width: 18rem;">
         <img src="/ALBUM/GRADUATION/KakaoTalk_20220225_235145116_04.webp" class="card-img-top" alt="...">
         <div class="card-body">
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div classs="row mt-3">
+    <div classs="row mt-3 ml=auto">
       <div class="col"></div>
       <div class="col">
         <div class="card" style="width: 18rem;">
