--- a/ALBUM/ALBUM.html
+++ b/ALBUM/ALBUM.html
@@ -54,7 +54,7 @@
   <main>
     <div class="row mt-3 ml=auto">
       <div class="card" style="width: 18rem;">
-        <img src="/ALBUM/GRADUATION/KakaoTalk_20220225_235145116_04.webp" class="card-img-top" alt="...">
+        <img src="./GRADUATION/KakaoTalk_20220225_235145116_04.webp" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">2022.02.25<br>졸업🎓</h5>
           <p class="card-text">201614132 <br>부산대학교 지질환경과학과 <br>졸업</p>
@@ -66,7 +66,7 @@
       <div class="col"></div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="/ALBUM/TRIP/2018.02.20~02.24 일본/2018-02-21-16-35-29.jpg" class="card-img-top" alt="...">
+          <img src="./TRIP/2018.02.20~02.24 일본/2018-02-21-16-35-29.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">2018.02.20~24<br>일본</h5>
             <p class="card-text">은해언니랑</p>
